--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="ol.css">
-        <link rel="stylesheet" href="fontawesome-all.min.css">
-        <link rel="stylesheet" href="ol-layerswitcher.css">
-        <link rel="stylesheet" href="qgis2web.css">
+        <link rel="stylesheet" href="./resources/ol.css">
+        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
+        <link rel="stylesheet" href="./resources/qgis2web.css">
         <style>
         html, body {
             background-color: #ffffff;
@@ -51,29 +51,15 @@
                 <div id="popup-content"></div>
             </div>
         </div>
-        <script src="qgis2web_expressions.js"></script>
-        <script src="polyfills.js"></script>
-        <script src="functions.js"></script>
-        <script src="ol.js"></script>
-        <script src="ol-layerswitcher.js"></script>
-        <script src="layers/DZ2021P_1.js"></script>
-        <script src="layers/ControlledPrimarySchools_2.js"></script>
-        <script src="layers/DZ2021C_4.js"></script>
-        <script src="layers/ControlledPrimarySchoolscopy_5.js"></script>
-        <script src="layers/SDZ2021P_7.js"></script>
-        <script src="layers/ControlledPostPrimarySchoolscopy_8.js"></script>
-        <script src="layers/SDZ2021C_10.js"></script>
-        <script src="layers/ControlledPostPrimarySchools_11.js"></script>
-        <script src="styles/DZ2021P_1_style.js"></script>
-        <script src="styles/ControlledPrimarySchools_2_style.js"></script>
-        <script src="styles/DZ2021C_4_style.js"></script>
-        <script src="styles/ControlledPrimarySchoolscopy_5_style.js"></script>
-        <script src="styles/SDZ2021P_7_style.js"></script>
-        <script src="styles/ControlledPostPrimarySchoolscopy_8_style.js"></script>
-        <script src="styles/SDZ2021C_10_style.js"></script>
-        <script src="styles/ControlledPostPrimarySchools_11_style.js"></script>
-        <script src="layers.js" type="text/javascript"></script> 
-        <script src="Autolinker.min.js"></script>
-        <script src="qgis2web.js"></script>
+        <script src="resources/qgis2web_expressions.js"></script>
+        <script src="resources/polyfills.js"></script>
+        <script src="./resources/functions.js"></script>
+        <script src="./resources/ol.js"></script>
+        <script src="./resources/ol-layerswitcher.js"></script>
+        <script src="layers/DZ2021P_1.js"></script><script src="layers/ControlledPrimarySchools_2.js"></script><script src="layers/DZ2021C_4.js"></script><script src="layers/ControlledPrimarySchoolscopy_5.js"></script><script src="layers/SDZ2021P_7.js"></script><script src="layers/ControlledPostPrimarySchoolscopy_8.js"></script><script src="layers/SDZ2021C_10.js"></script><script src="layers/ControlledPostPrimarySchools_11.js"></script>
+        <script src="styles/DZ2021P_1_style.js"></script><script src="styles/ControlledPrimarySchools_2_style.js"></script><script src="styles/DZ2021C_4_style.js"></script><script src="styles/ControlledPrimarySchoolscopy_5_style.js"></script><script src="styles/SDZ2021P_7_style.js"></script><script src="styles/ControlledPostPrimarySchoolscopy_8_style.js"></script><script src="styles/SDZ2021C_10_style.js"></script><script src="styles/ControlledPostPrimarySchools_11_style.js"></script>
+        <script src="./layers/layers.js" type="text/javascript"></script> 
+        <script src="./resources/Autolinker.min.js"></script>
+        <script src="./resources/qgis2web.js"></script>
     </body>
 </html>
