--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        
+
         <!-- Corrected paths for CSS files -->
         <link rel="stylesheet" href="ol.css">
         <link rel="stylesheet" href="fontawesome-all.min.css">
         <link rel="stylesheet" href="ol-layerswitcher.css">
-        <link rel="stylesheet" href="agis2web.css"> <!-- Adjusted for correct path -->
+        <link rel="stylesheet" href="agis2web.css"> <!-- Assuming it is in the root -->
 
         <style>
         html, body {
